fixed paragraph word-wrap

--- a/public/styles/tweet-article.css
+++ b/public/styles/tweet-article.css
@@ -12,7 +12,10 @@ article.tweet p {
   font-weight: 600;
   text-align: left;
   padding: 0 1em;
+  width: 100%;
+  word-wrap: break-word;
 }
+
 article.tweet header {
   width: 100%;
   display: flex;
